update swagger docs, readme
